# deps_zlib

./: CMakeLists.txt
resources/: ojdkbuild_zlib.def
resources/zlib_127_cmake/: CMakeLists.txt
resources/zlib_128_cmake/: CMakeLists.txt
test/: CMakeLists.txt  zlib_test.cpp
